test/should_fail/ret_002.grg
actions ret_002;

rule r : (Node, Node) {
	pattern {
		x: Node;
		y: Node;
	}
	modify {
		delete(x);
		return(x, y);
	}
}

